--- a/src/pages/login/styles.scss
+++ b/src/pages/login/styles.scss
@@ -1,5 +1,5 @@
 .loginUser {
-    height: 100vh;
+    height: calc(100vh - 56px);
     background-image: url("../../assets/background.jpg");
     background-position: center;
     background-repeat: no-repeat;
